--- a/VideoProcatApplication/VideoProcatApplication/packages.config
+++ b/VideoProcatApplication/VideoProcatApplication/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MediaPlayerUI.NET" version="0.8.0" targetFramework="net461" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net461" />
+  <package id="Xamarin.Forms" version="2.5.0.121934" targetFramework="net461" />
 </packages>
